# pip-deepfreeze

./: .flake8  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  HISTORY.rst  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
docs/: synopsis.odg
news/: 10.bugfix  100.feature  101.feature  106.misc  107.misc  11.feature  110.feature  112.removal  115.feature  119.feature  120.feature  123.features  126.bugfix  127.bugfix  131.feature  132.feature  133.bugfix  134.bugfix  135.feature  138.bugfix  143.feature  144.removal  145.feature  152.feature  156.feature  158.bugfix  16.feature  162.feature  165.removal  169.feature  17.feature  170.removal  173.bugfix  175.feature  2.feature  22.feature  26.misc  27.feature  28.feature  29.feature  (+32 more)
src/pip_deepfreeze/: __main__.py  _list_depends.py  compat.py  detect.py  env-info-json.py  env_info_json.py  fixup-vcs-direct-urls.py  installed_dist.py  list_depends.py  list_depends_script.py  list_installed_depends.py  lock.py  merge.py  pip.py  pip_list_json.py  project_name.py  pyproject.py  pyproject_toml.py  req_file_parser.py  req_merge.py  req_parser.py  sanity.py  sync.py  tree.py  utils.py
tests/: conftest.py  test_detect.py  test_direct_url.py  test_env_info_json.py  test_fixup_direct_url.py  test_list_depends.py  test_list_depends_script.py  test_list_installed_depends.py  test_merge.py  test_pip.py  test_pip_list_json.py  test_project_name.py  test_pyproject_options.py  test_req_file_parser.py  test_req_merge.py  test_req_parser.py  test_sanity.py  test_sync.py  test_tree.py  test_utils.py
tests/testpkgs/: README.md
