[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pip-deepfreeze"
description = "A simple pip freeze workflow for Python application developers."
readme = "README.rst"
authors = [{name = "Stéphane Bidoul", email = "stephane.bidoul@gmail.com"}]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.7"
dependencies=[
    "httpx",
    "packaging>=20.4",
    "toml",
    "typer[all]>=0.3.2",
    "typing-extensions ; python_version<'3.8'",  # for Protocol, TypedDict
]
dynamic = ["version"]

[project.optional-dependencies]
"test" = ["pytest", "pytest-cov", "pytest-xdist", "virtualenv"]
"mypy" = ["mypy", "types-toml", "types-setuptools"]

[project.scripts]
pip-df = "pip_deepfreeze.__main__:main"
pip-deepfreeze = "pip_deepfreeze.__main__:main"

[project.urls]
"Source" = "https://github.com/sbidoul/pip-deepfreeze/"
"Bug Reports" = "https://github.com/sbidoul/pip-deepfreeze/issues"
"Changelog" = "https://github.com/sbidoul/pip-deepfreeze/blob/master/HISTORY.rst"

[tool.hatch.version]
source = "vcs"

[tool.isort]
# see https://github.com/psf/black
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
use_parentheses = true
line_length = 88
known_first_party = "pip_deepfreeze"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"

[tool.towncrier]
package = "pip_deepfreeze"
package_dir = "src"
filename = "HISTORY.rst"
directory = "news"
issue_format = "`#{issue} <https://github.com/sbidoul/pip-deepfreeze/issues/{issue}>`_"
title_format = "{version} ({project_date})"
