[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pip-deepfreeze"
description = "A simple pip freeze workflow for Python application developers."
readme = "README.rst"
authors = [{name = "Stéphane Bidoul", email = "stephane.bidoul@gmail.com"}]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies=[
    "httpx",
    "packaging>=23",
    "tomli ; python_version<'3.11'",
    "typer[all]>=0.3.2",
]
dynamic = ["version"]

[project.optional-dependencies]
"test" = ["pytest", "pytest-cov", "pytest-xdist", "virtualenv"]
"mypy" = ["mypy", "types-toml", "types-setuptools"]

[project.scripts]
pip-df = "pip_deepfreeze.__main__:main"
pip-deepfreeze = "pip_deepfreeze.__main__:main"

[project.urls]
"Source" = "https://github.com/sbidoul/pip-deepfreeze/"
"Bug Reports" = "https://github.com/sbidoul/pip-deepfreeze/issues"
"Changelog" = "https://github.com/sbidoul/pip-deepfreeze/blob/master/HISTORY.rst"

[tool.hatch.version]
source = "vcs"

[tool.towncrier]
package = "pip_deepfreeze"
package_dir = "src"
filename = "HISTORY.rst"
directory = "news"
issue_format = "`#{issue} <https://github.com/sbidoul/pip-deepfreeze/issues/{issue}>`_"
title_format = "{version} ({project_date})"

[tool.ruff]
fix = true
select = [
    "E", "F", "W", "C90", "B", "I", "UP", "RUF"
]
exclude = [
    "src/pip_deepfreeze/pip-list-json.py",
    "src/pip_deepfreeze/env-info-json.py",
    "tests/test_pip_list_json.py",
    "tests/test_env_info_json.py",
]
target-version = "py38"

[tool.ruff.per-file-ignores]
"__main__.py" = ["B008"]

[tool.ruff.mccabe]
max-complexity = 13

[tool.ruff.isort]
known-first-party = ["pip_deepfreeze"]
combine-as-imports = true

[tool.mypy]
strict = true
show_error_codes = true
